--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,12 @@
 			<artifactId>aws-java-sdk-ses</artifactId>
 			<version>1.12.100</version>
 		</dependency>
+		<!-- AWS event bridge SDK -->
+		<dependency>
+			<groupId>software.amazon.awssdk</groupId>
+			<artifactId>eventbridge</artifactId>
+			<version>2.17.76</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
